# libra

./: README.md
Addapt_Mobile_App_Code/: App.js  app.json  index.js  metro.config.js  package.json
Addapt_Mobile_App_Code/android/: Releasekeystore.rtf  build.gradle  gradle.properties  link-assets-manifest.json  settings.gradle
Addapt_Mobile_App_Code/android/app/: adappt_release.jks  build.gradle  upload_certificate.pem
Addapt_Mobile_App_Code/ios/: Podfile
Addapt_Mobile_App_Code/ios/AdapptCommissioning_New/: AdapptCommissioning_New.entitlements  AppDelegate.mm  Info.plist  LaunchScreen.storyboard
Addapt_Mobile_App_Code/ios/AdapptCommissioning_New.xcodeproj/: project.pbxproj
Addapt_Mobile_App_Code/ios/AdapptCommissioning_New.xcworkspace/: contents.xcworkspacedata
Addapt_Mobile_App_Code/ios/AdapptCommissioning_NewTests/: AdapptCommissioning_NewTests.m
Addapt_Mobile_App_Code/ios/OneSignalNotificationServiceExtension/: OneSignalNotificationServiceExtension.entitlements
Addapt_Mobile_App_Code/src/assets/: Icon.js
Addapt_Mobile_App_Code/src/components/: BarcodeModal.js  Button.js  CategoryItem.js  CustomCameraItem.js  CustomDraw.js  CustomDropdown.js  CustomHeader.js  CustomType.js  CustomeToast.js  DeleteModal.js  GetCustomTime.js  GetTimeForVideo.js  KinesisStreamView.js  MultiDropdown.js  MyCodeField.js  PasswordCriteria.js  PasswordValidation.js  Stepper.js  TextInputField.js  WebRTCSocket.js  WebRTCStream.js  WebRTCStreamView.js
Addapt_Mobile_App_Code/src/config/: color.js  styles.js
Addapt_Mobile_App_Code/src/constants/: baseApi.js  errors.js
Addapt_Mobile_App_Code/src/helpers/: ImageResizer.js  auth.js  configureAxios.js  global.js  logging.js
Addapt_Mobile_App_Code/src/hooks/: TabVisibilityContext.js  (+2 more)
doc/: API.md  Adappt API for manufacturer.md  AdapptServerSetup.md  Architecture & APIs for mobile app (Adappt Internal)  Architecture & APIs for mobile app (Adappt Internal).md  Final Doc  Final Doc.md  Hualai API Discussion  Hualai API Discussion.md  NewApiDoc.md  OverAllArchitecture.md  User Story.md  camera_commissioning.md  s3_File_Upload.py  turnserver.conf  xalientApisReadme.md
doc/images/: Over all Architecture
mobapp/: README.md  build.gradle  ffmpeg_build.sh  gradle.properties  local.properties
mobapp/app/: build.gradle
src/broadcast/: README.md
src/dmon/: Makefile  README.md  buildenvmuclibc.sh  drlog.c  log.sh  test.sh
src/dropbear/: Makefile  README.md  build.sh  buildenv.sh  buildenv540.sh  buildenvmuclib.sh
src/ingenic/: README.md  buildenv.sh  buildenv472uclibc.sh  buildenv540uclibc.sh
src/rtsp/: CMakeLists.txt  build.sh  rtsp.cfg.example
src/signaller/: README.md  config.js  index.html  index.js  package.json  runhttps.py  test.html
src/socketio_signalling/: config.js  index.js  package.json  runhttps.py
src/streamer/: CMakeLists.txt  README.md
src/streamer/samples/: CMakeLists.txt  Common.c  Samples.h  devicePlayer.c  devicePlayer.h  kvsWebRTCClientMaster.c
src/video4linux2/: Makefile  devicePlayer.c  devicePlayer_mp4.c
test/: Makefile
test/hello/: CMakeLists.txt  hello.c  main.c
(+197 files in other folders)
